KJHH-1167: Fix overlapping select options in kaytto-oikeusanomukset page
* KJHH-1167: Fix overlapping select options in kaytto-oikeusanomukset page

* KJHH-1167: Move inline-styles to css for better caching

* KJHH-1167: Increase height scaling for longer group labels

* KJHH-1167: Fix typo in css id name

--- a/henkilo-ui/src/main/static/src/components/common/select/OphSelect.css
+++ b/henkilo-ui/src/main/static/src/components/common/select/OphSelect.css
@@ -65,3 +65,8 @@
 .Select-menu-outer {
     cursor: pointer;
 }
+
+/* Override react-select/dist/react-select.css (198px) to allow custom maxHeight */
+.Select-menu, .Select-menu-outer {
+    max-height: none;
+}
